[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flocs-lta"
version = "0.0.0"
description = ""
requires-python = ">3.9"
dependencies = ["typer"]

[project.scripts]
flocs-lta-download = "flocs_lta.flocs_download:main"
flocs-lta-search = "flocs_lta.flocs_search_lta:main"

[tool.setuptools]
packages = ["flocs_lta"]
