[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flocs-lta"
version = "1.0.0"
description = ""
requires-python = ">3.9"
dependencies = ["astropy", "cyclopts", "structlog"]

[project.scripts]
flocs-lta = "flocs_lta.flocs_lta:main"

[tool.setuptools]
packages = ["flocs_lta"]
